--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,25 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Čilejkárska desina – Bežecké podujatie</title>
+  <link rel="canonical" href="https://cilejkarskadesina.sk/">
+
+  <meta name="description" content="Čilejkárska desina – komunitné bežecké podujatie v regióne Tekov (Hronské Kľačany, Starý Tekov, Veľké Kozmálovce). 10 km, 5 km a detské behy. Dátum: 2. 5. 2026.">
+  <meta name="robots" content="index,follow,max-image-preview:large">
+
+  <!-- Open Graph (Facebook, Messenger) -->
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="sk_SK">
+  <meta property="og:title" content="Čilejkárska desina – Bežecké podujatie">
+  <meta property="og:description" content="10 km, 5 km a detské behy • 2. 5. 2026 • Tekov">
+  <meta property="og:url" content="https://cilejkarskadesina.sk/">
+  <meta property="og:image" content="https://cilejkarskadesina.sk/og.jpg">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Čilejkárska desina – Bežecké podujatie">
+  <meta name="twitter:description" content="10 km, 5 km a detské behy • 2. 5. 2026 • Tekov">
+  <meta name="twitter:image" content="https://cilejkarskadesina.sk/og.jpg">
+
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
@@ -697,7 +716,6 @@
     </div>
   </div>
 </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
-<script src="script.js"></script>
