--- a/public/index.html
+++ b/public/index.html
@@ -66,36 +66,37 @@
   </style>
 </head>
 
-<body class="font-sans bg-folk-cream text-navy">
+  <body class="font-sans bg-folk-cream text-navy">
 
-<!-- ====== FOLKLÓRNA NAVIGÁCIA ====== -->
-<nav id="navbar" class="fixed top-0 left-0 right-0 z-50 bg-white border-b-4 border-primary shadow-lg">
-  <div class="folk-border">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex items-center justify-between h-20">
-        <!-- Logo -->
-        <a href="#top" class="flex items-center gap-4 group">
-          <div class="relative">
-            <img src="cdlogo.jpg" alt="Logo Čilejkárska desina"
-                 class="w-14 h-14 rounded-full border-4 border-folk-pink shadow-lg" />
-          </div>
-          <div class="hidden sm:block">
-            <div class="handwritten-title text-3xl text-primary">
-              Čilejkárska <span class="text-folk-pink">DESINA</span>
+  <!-- ====== FOLKLÓRNA NAVIGÁCIA ====== -->
+  <nav id="navbar" class="fixed top-0 left-0 right-0 z-50 bg-white border-b-4 border-primary shadow-lg">
+    <div class="folk-border">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="flex items-center justify-between h-20">
+          <!-- Logo -->
+          <a href="#top" class="flex items-center gap-4 group">
+            <div class="relative">
+              <img src="cdlogo.jpg" alt="Logo Čilejkárska desina"
+                   class="w-14 h-14 rounded-full border-4 border-folk-pink shadow-lg" />
             </div>
-            <div class="text-xs font-bold text-folk-purple uppercase tracking-wider">2.5.2026 • Tekov</div>
+            <div class="hidden sm:block">
+              <div class="handwritten-title text-3xl text-primary">
+                Čilejkárska <span class="text-folk-pink">DESINA</span>
+              </div>
+              <div class="text-xs font-bold text-folk-purple uppercase tracking-wider">2.5.2026 • Tekov</div>
+            </div>
+          </a>
+
+          <!-- Desktop Menu -->
+          <div class="hidden md:flex items-center gap-2">
+            <a href="#about" class="px-4 py-2 font-bold text-primary hover:text-folk-pink transition">O pretekoch</a>
+            <a href="#propozicie" class="px-4 py-2 font-bold text-primary hover:text-folk-pink transition">Propozície</a>
+            <a href="#route" class="px-4 py-2 font-bold text-primary hover:text-folk-pink transition">Trasa</a>
+            <a href="#contact" class="px-4 py-2 font-bold text-primary hover:text-folk-pink transition">Kontakt</a>
+            <a href="gallery.html" class="px-4 py-2 font-bold text-primary hover:text-folk-pink transition">Galéria</a>
           </div>
-        </a>
 
-        <!-- Desktop Menu -->
-        <div class="hidden md:flex items-center gap-2">
-          <a href="#about" class="px-4 py-2 font-bold text-primary hover:text-folk-pink transition">O pretekoch</a>
-          <a href="#propozicie" class="px-4 py-2 font-bold text-primary hover:text-folk-pink transition">Propozície</a>
-          <a href="#route" class="px-4 py-2 font-bold text-primary hover:text-folk-pink transition">Trasa</a>
-          <a href="#contact" class="px-4 py-2 font-bold text-primary hover:text-folk-pink transition">Kontakt</a>
-        </div>
 
-        <!-- CTA + Menu -->
         <div class="flex items-center gap-3">
           <a href="#registration"
              class="hidden sm:inline-flex items-center gap-2 bg-folk-pink hover:bg-folk-purple text-white font-bold px-6 py-3 border-2 border-navy shadow-lg transition-all">
@@ -252,7 +253,7 @@
     </div>
 
     <h1 class="handwritten-title text-6xl sm:text-7xl lg:text-8xl text-white mb-6 leading-tight">
-      Tradičný beh<br/>v srdci <span class="text-folk-pink">Tekova</span>
+    Beh<br/>v srdci <span class="text-folk-pink">Tekova</span>
     </h1>
 
     <p class="text-xl sm:text-2xl text-folk-cream mb-12 max-w-2xl mx-auto leading-relaxed font-serif">
