--- a/public/index.html
+++ b/public/index.html
@@ -211,8 +211,9 @@
   </div>
 </aside>
 
-<!-- ====== FOLKLÓRNE HERO ====== -->
-<section id="top" class="relative min-h-screen flex items-center justify-center overflow-hidden bg-navy">
+
+  <section id="top" class="relative min-h-screen flex items-center justify-center overflow-hidden bg-navy">
+
   <!-- Folklórne pozadie -->
   <div class="absolute inset-0 bg-gradient-to-br from-navy via-primary to-navy opacity-90"></div>
   <div class="absolute inset-0 embroidery-pattern opacity-30"></div>
@@ -274,41 +275,44 @@
   </div>
 </section>
 
-<!-- Folklórna vlnovka -->
-<div class="folk-wave"></div>
 
-<!-- ====== STATS CARDS ====== -->
-<section class="relative -mt-20 z-20 px-6 pb-16">
-  <div class="max-w-5xl mx-auto">
-    <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
-      <div class="bg-navy border-4 border-folk-pink p-8 text-center shadow-xl">
-        <div class="w-16 h-16 mx-auto mb-4 bg-folk-pink/30 border-3 border-folk-pink flex items-center justify-center">
-          <span class="material-icons text-folk-pink text-3xl">map</span>
-        </div>
-        <div class="text-xs font-bold text-folk-pink uppercase tracking-wide mb-2">Trasa</div>
-        <div class="handwritten-title text-3xl text-white">10 km • 5 km</div>
-      </div>
 
-      <div class="bg-navy border-4 border-folk-purple p-8 text-center shadow-xl">
-        <div class="w-16 h-16 mx-auto mb-4 bg-folk-purple/30 border-3 border-folk-purple flex items-center justify-center">
-          <span class="material-icons text-folk-purple text-3xl">event</span>
-        </div>
-        <div class="text-xs font-bold text-folk-purple uppercase tracking-wide mb-2">Dátum</div>
-        <div class="handwritten-title text-3xl text-white">2. 5. 2026</div>
-      </div>
 
-      <div class="bg-navy border-4 border-folk-blue p-8 text-center shadow-xl">
-        <div class="w-16 h-16 mx-auto mb-4 bg-folk-blue/30 border-3 border-folk-blue flex items-center justify-center">
-          <span class="material-icons text-folk-blue text-3xl">timer</span>
+
+  <div class="folk-wave"></div>
+  <section class="relative z-20 px-6 py-16 bg-folk-cream">
+
+    <div class="max-w-5xl mx-auto -translate-y-18 transform">
+      <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
+        <div class="bg-navy border-4 border-folk-pink p-8 text-center shadow-xl">
+          <div class="w-16 h-16 mx-auto mb-4 bg-folk-pink/30 border-3 border-folk-pink flex items-center justify-center">
+            <span class="material-icons text-folk-pink text-3xl">map</span>
+          </div>
+          <div class="text-xs font-bold text-folk-pink uppercase tracking-wide mb-2">Trasa</div>
+          <div class="handwritten-title text-3xl text-white">10 km • 5 km</div>
         </div>
-        <div class="text-xs font-bold text-folk-blue uppercase tracking-wide mb-2">Štarty</div>
-        <div class="handwritten-title text-3xl text-white">9:00 • 10:30 • 11:45</div>
-        <div class="text-xs text-white/70 font-bold mt-2">deti • 5 km • 10 km</div>
+
+        <div class="bg-navy border-4 border-folk-purple p-8 text-center shadow-xl">
+          <div class="w-16 h-16 mx-auto mb-4 bg-folk-purple/30 border-3 border-folk-purple flex items-center justify-center">
+            <span class="material-icons text-folk-purple text-3xl">event</span>
+          </div>
+          <div class="text-xs font-bold text-folk-purple uppercase tracking-wide mb-2">Dátum</div>
+          <div class="handwritten-title text-3xl text-white">2. 5. 2026</div>
+        </div>
+
+        <div class="bg-navy border-4 border-folk-blue p-8 text-center shadow-xl">
+          <div class="w-16 h-16 mx-auto mb-4 bg-folk-blue/30 border-3 border-folk-blue flex items-center justify-center">
+            <span class="material-icons text-folk-blue text-3xl">timer</span>
+          </div>
+          <div class="text-xs font-bold text-folk-blue uppercase tracking-wide mb-2">Štarty</div>
+          <div class="handwritten-title text-3xl text-white">9:00 • 10:30 • 11:45</div>
+          <div class="text-xs text-white/70 font-bold mt-2">deti • 5 km • 10 km</div>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
+  <div class="folk-wave"></div>
 <!-- ====== ABOUT ====== -->
 <section id="about" class="py-24 px-6 bg-white embroidery-pattern">
   <div class="max-w-5xl mx-auto">
