--- a/public/index.html
+++ b/public/index.html
@@ -248,18 +248,22 @@
            class="w-40 h-40 sm:w-48 sm:h-48 mx-auto shadow-2xl rounded-full border-8 border-white pulse-folk" />
     </div>
 
-    <div class="inline-flex items-center gap-3 px-6 py-3 bg-white border-4 border-folk-pink text-folk-pink text-sm font-bold tracking-wide uppercase mb-6 shadow-lg">
+    <div class="inline-flex items-center gap-4 px-9 py-3 bg-white border-4 border-folk-pink text-folk-pink text-sm font-bold tracking-wide uppercase mb-8 shadow-lg">
       <span class="material-icons text-lg">emoji_events</span>
-      <span>1. ročník • Komunitné podujatie</span>
+      <span><b>1. ročník • Komunitné podujatie</b></span>
     </div>
 
-    <h1 class="handwritten-title text-6xl sm:text-7xl lg:text-8xl text-white mb-6 leading-tight">
-    Beh<br/>v srdci <span class="text-folk-pink">Tekova</span>
+    <h1 class="handwritten-title
+           text-7xl
+           sm:text-8xl
+           md:text-9xl
+           lg:text-[9.5rem]
+           xl:text-[11rem]
+           text-white mb-9 leading-tight">
+      Beh<br/>v srdci <span class="text-folk-pink">Tekova</span>
     </h1>
 
-    <p class="text-xl sm:text-2xl text-folk-cream mb-12 max-w-2xl mx-auto leading-relaxed font-serif">
-      10 km, 5 km a detské behy. Príď si zabehnúť, povzbudiť alebo stráviť deň s komunitou.
-    </p>
+
     <!-- COUNTDOWN -->
     <div class="mt-10 mb-16 inline-block bg-white/10 backdrop-blur border-4 border-white/70 shadow-xl px-6 py-5">
       <div class="text-xs font-black uppercase tracking-widest text-folk-cream/90 mb-3">
