--- a/public/index.html
+++ b/public/index.html
@@ -144,9 +144,9 @@
           <div class="w-10 h-10 sm:w-12 sm:h-12 bg-folk-pink/20 border-2 border-folk-pink flex items-center justify-center flex-shrink-0">
             <span class="material-icons text-folk-pink text-xl sm:text-2xl">info</span>
           </div>
-          <div class="min-w-0">
-            <div class="font-bold text-navy text-sm sm:text-base">O pretekoch</div>
-            <div class="text-xs text-folk-purple">čo vás čaká</div>
+          <div class="min-w-0 flex-1">
+            <div class="font-bold text-navy text-sm sm:text-base truncate">O pretekoch</div>
+            <div class="text-xs text-folk-purple truncate">čo vás čaká</div>
           </div>
         </a>
 
@@ -154,9 +154,9 @@
           <div class="w-10 h-10 sm:w-12 sm:h-12 bg-folk-purple/20 border-2 border-folk-purple flex items-center justify-center flex-shrink-0">
             <span class="material-icons text-folk-purple text-xl sm:text-2xl">map</span>
           </div>
-          <div class="min-w-0">
-            <div class="font-bold text-navy text-sm sm:text-base">Trasa</div>
-            <div class="text-xs text-folk-purple">mapa + parametre</div>
+          <div class="min-w-0 flex-1">
+            <div class="font-bold text-navy text-sm sm:text-base truncate">Trasa</div>
+            <div class="text-xs text-folk-purple truncate">mapa + parametre</div>
           </div>
         </a>
 
@@ -164,9 +164,9 @@
           <div class="w-10 h-10 sm:w-12 sm:h-12 bg-folk-green/20 border-2 border-folk-green flex items-center justify-center flex-shrink-0">
             <span class="material-icons text-folk-green text-xl sm:text-2xl">description</span>
           </div>
-          <div class="min-w-0">
-            <div class="font-bold text-navy text-sm sm:text-base">Propozície</div>
-            <div class="text-xs text-folk-purple">pravidlá + ceny</div>
+          <div class="min-w-0 flex-1">
+            <div class="font-bold text-navy text-sm sm:text-base truncate">Propozície</div>
+            <div class="text-xs text-folk-purple truncate">pravidlá + ceny</div>
           </div>
         </a>
 
@@ -174,9 +174,9 @@
           <div class="w-10 h-10 sm:w-12 sm:h-12 bg-folk-blue/20 border-2 border-folk-blue flex items-center justify-center flex-shrink-0">
             <span class="material-icons text-folk-blue text-xl sm:text-2xl">call</span>
           </div>
-          <div class="min-w-0">
-            <div class="font-bold text-navy text-sm sm:text-base">Kontakt</div>
-            <div class="text-xs text-folk-purple">info + miesto</div>
+          <div class="min-w-0 flex-1">
+            <div class="font-bold text-navy text-sm sm:text-base truncate">Kontakt</div>
+            <div class="text-xs text-folk-purple truncate">info + miesto</div>
           </div>
         </a>
 
@@ -184,9 +184,9 @@
           <div class="w-10 h-10 sm:w-12 sm:h-12 bg-folk-pink/20 border-2 border-folk-pink flex items-center justify-center flex-shrink-0">
             <span class="material-icons text-folk-pink text-xl sm:text-2xl">how_to_reg</span>
           </div>
-          <div class="min-w-0">
-            <div class="font-bold text-navy text-sm sm:text-base">Registrácia</div>
-            <div class="text-xs text-folk-purple">prihlásiť sa</div>
+          <div class="min-w-0 flex-1">
+            <div class="font-bold text-navy text-sm sm:text-base truncate">Registrácia</div>
+            <div class="text-xs text-folk-purple truncate">prihlásiť sa</div>
           </div>
         </a>
 
@@ -194,9 +194,9 @@
           <div class="w-10 h-10 sm:w-12 sm:h-12 bg-folk-blue/20 border-2 border-folk-blue flex items-center justify-center flex-shrink-0">
             <span class="material-icons text-folk-blue text-xl sm:text-2xl">photo_library</span>
           </div>
-          <div class="min-w-0">
-            <div class="font-bold text-navy text-sm sm:text-base">Galéria</div>
-            <div class="text-xs text-folk-purple">fotky z podujatia</div>
+          <div class="min-w-0 flex-1">
+            <div class="font-bold text-navy text-sm sm:text-base truncate">Galéria</div>
+            <div class="text-xs text-folk-purple truncate">fotky z podujatia</div>
           </div>
         </a>
       </div>
@@ -205,14 +205,14 @@
       <div class="space-y-2 sm:space-y-3">
         <a href="#registration"
            class="drawerLink w-full flex items-center justify-center gap-2 bg-folk-pink hover:bg-folk-purple text-white font-bold px-4 sm:px-6 py-3 sm:py-4 text-sm sm:text-base border-2 sm:border-3 border-navy shadow-lg transition-all">
-          <span class="material-icons text-lg sm:text-xl">bolt</span>
-          <span>Registrovať sa teraz</span>
+          <span class="material-icons text-lg sm:text-xl flex-shrink-0">bolt</span>
+          <span class="truncate">Registrovať sa teraz</span>
         </a>
         <a href="https://mapy.com/s/necuhuzuge" target="_blank" rel="noopener"
            class="w-full flex items-center justify-center gap-2 bg-white border-2 sm:border-3 border-navy
                     text-navy font-bold px-4 sm:px-6 py-3 sm:py-4 text-sm sm:text-base hover:bg-folk-cream transition">
-          <span class="material-icons text-lg sm:text-xl">open_in_new</span>
-          <span>Otvoriť trasu</span>
+          <span class="material-icons text-lg sm:text-xl flex-shrink-0">open_in_new</span>
+          <span class="truncate">Otvoriť trasu</span>
         </a>
       </div>
     </div>
@@ -291,7 +291,7 @@
              lg:text-[9.5rem]
              xl:text-[11rem]
              text-white mb-9 leading-tight">
-      Beh<br/>v srdci <span class="text-folk-pink">Tekovského regiónu</span>
+      Beh<br/>v srdci <span class="text-folk-pink">Tekova</span>
     </h1>
 
     <!-- COUNTDOWN -->
@@ -301,29 +301,28 @@
       </div>
 
       <div class="grid grid-cols-4 gap-3 sm:gap-4 min-w-[280px]">
-        <div class="bg-navy/70 border-2 border-white/60 px-4 py-3 shadow">
-          <div id="cd-days" class="handwritten-title text-4xl sm:text-9xl text-white leading-none">—</div>
-          <div class="text-[11px] sm:text-xs font-bold text-white/80 uppercase tracking-wider mt-1">dní</div>
+        <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-4 py-3 shadow">
+          <div id="cd-days" class="handwritten-title text-3xl sm:text-4xl md:text-9xl text-white leading-none">—</div>
+          <div class="text-[10px] sm:text-[11px] md:text-xs font-bold text-white/80 uppercase tracking-wider mt-1">dní</div>
         </div>
 
-        <div class="bg-navy/70 border-2 border-white/60 px-4 py-3 shadow">
-          <div id="cd-hours" class="handwritten-title text-4xl sm:text-9xl text-white leading-none">—</div>
-          <div class="text-[11px] sm:text-xs font-bold text-white/80 uppercase tracking-wider mt-1">hod</div>
+        <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-4 py-3 shadow">
+          <div id="cd-hours" class="handwritten-title text-3xl sm:text-4xl md:text-9xl text-white leading-none">—</div>
+          <div class="text-[10px] sm:text-[11px] md:text-xs font-bold text-white/80 uppercase tracking-wider mt-1">hod</div>
         </div>
 
-        <div class="bg-navy/70 border-2 border-white/60 px-4 py-3 shadow">
-          <div id="cd-mins" class="handwritten-title text-4xl sm:text-9xl text-white leading-none">—</div>
-          <div class="text-[11px] sm:text-xs font-bold text-white/80 uppercase tracking-wider mt-1">min</div>
+        <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-4 py-3 shadow">
+          <div id="cd-mins" class="handwritten-title text-3xl sm:text-4xl md:text-9xl text-white leading-none">—</div>
+          <div class="text-[10px] sm:text-[11px] md:text-xs font-bold text-white/80 uppercase tracking-wider mt-1">min</div>
         </div>
 
-        <div class="bg-navy/70 border-2 border-white/60 px-4 py-3 shadow">
-          <div id="cd-secs" class="handwritten-title text-4xl sm:text-9xl text-white leading-none">—</div>
-          <div class="text-[11px] sm:text-xs font-bold text-white/80 uppercase tracking-wider mt-1">sek</div>
+        <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-4 py-3 shadow">
+          <div id="cd-secs" class="handwritten-title text-3xl sm:text-4xl md:text-9xl text-white leading-none">—</div>
+          <div class="text-[10px] sm:text-[11px] md:text-xs font-bold text-white/80 uppercase tracking-wider mt-1">sek</div>
         </div>
       </div>
 
       <div id="cd-note" class="mt-3 text-xs font-bold text-white/70"></div>
-
     </div>
 
     <div class="flex flex-col sm:flex-row gap-5 justify-center">
