--- a/public/index.html
+++ b/public/index.html
@@ -295,34 +295,36 @@
     </h1>
 
     <!-- COUNTDOWN -->
-    <div class="mt-10 mb-16 inline-block bg-white/10 backdrop-blur border-4 border-white/70 shadow-xl px-6 py-5">
-      <div class="text-xs font-black uppercase tracking-widest text-folk-cream/90 mb-3">
-        Štart už o
+    <div class="mt-10 mb-16 w-full flex justify-center">
+      <div class="inline-block bg-white/10 backdrop-blur border-4 border-white/70 shadow-xl px-4 sm:px-6 py-5 w-full max-w-md">
+        <div class="text-xs font-black uppercase tracking-widest text-folk-cream/90 mb-3 text-center">
+          Štart už o
+        </div>
+
+        <div class="grid grid-cols-4 gap-2 sm:gap-3 md:gap-4">
+          <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-3 md:px-4 py-2 sm:py-3 shadow">
+            <div id="cd-days" class="handwritten-title text-2xl sm:text-3xl md:text-4xl lg:text-5xl text-white leading-none text-center">—</div>
+            <div class="text-[9px] sm:text-[10px] md:text-[11px] font-bold text-white/80 uppercase tracking-wider mt-1 text-center">dní</div>
+          </div>
+
+          <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-3 md:px-4 py-2 sm:py-3 shadow">
+            <div id="cd-hours" class="handwritten-title text-2xl sm:text-3xl md:text-4xl lg:text-5xl text-white leading-none text-center">—</div>
+            <div class="text-[9px] sm:text-[10px] md:text-[11px] font-bold text-white/80 uppercase tracking-wider mt-1 text-center">hod</div>
+          </div>
+
+          <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-3 md:px-4 py-2 sm:py-3 shadow">
+            <div id="cd-mins" class="handwritten-title text-2xl sm:text-3xl md:text-4xl lg:text-5xl text-white leading-none text-center">—</div>
+            <div class="text-[9px] sm:text-[10px] md:text-[11px] font-bold text-white/80 uppercase tracking-wider mt-1 text-center">min</div>
+          </div>
+
+          <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-3 md:px-4 py-2 sm:py-3 shadow">
+            <div id="cd-secs" class="handwritten-title text-2xl sm:text-3xl md:text-4xl lg:text-5xl text-white leading-none text-center">—</div>
+            <div class="text-[9px] sm:text-[10px] md:text-[11px] font-bold text-white/80 uppercase tracking-wider mt-1 text-center">sek</div>
+          </div>
+        </div>
+
+        <div id="cd-note" class="mt-3 text-xs font-bold text-white/70 text-center"></div>
       </div>
-
-      <div class="grid grid-cols-4 gap-3 sm:gap-4 min-w-[280px]">
-        <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-4 py-3 shadow">
-          <div id="cd-days" class="handwritten-title text-3xl sm:text-4xl md:text-9xl text-white leading-none">—</div>
-          <div class="text-[10px] sm:text-[11px] md:text-xs font-bold text-white/80 uppercase tracking-wider mt-1">dní</div>
-        </div>
-
-        <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-4 py-3 shadow">
-          <div id="cd-hours" class="handwritten-title text-3xl sm:text-4xl md:text-9xl text-white leading-none">—</div>
-          <div class="text-[10px] sm:text-[11px] md:text-xs font-bold text-white/80 uppercase tracking-wider mt-1">hod</div>
-        </div>
-
-        <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-4 py-3 shadow">
-          <div id="cd-mins" class="handwritten-title text-3xl sm:text-4xl md:text-9xl text-white leading-none">—</div>
-          <div class="text-[10px] sm:text-[11px] md:text-xs font-bold text-white/80 uppercase tracking-wider mt-1">min</div>
-        </div>
-
-        <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-4 py-3 shadow">
-          <div id="cd-secs" class="handwritten-title text-3xl sm:text-4xl md:text-9xl text-white leading-none">—</div>
-          <div class="text-[10px] sm:text-[11px] md:text-xs font-bold text-white/80 uppercase tracking-wider mt-1">sek</div>
-        </div>
-      </div>
-
-      <div id="cd-note" class="mt-3 text-xs font-bold text-white/70"></div>
     </div>
 
     <div class="flex flex-col sm:flex-row gap-5 justify-center">
@@ -824,6 +826,7 @@
     </div>
   </div>
 </section>
+
 
 
 <!-- ====== FOOTER ====== -->
