--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
             <div class="handwritten-title text-2xl sm:text-3xl text-primary">
               Čilejkárska <span class="text-folk-pink">DESINA</span>
             </div>
-            <div class="text-xs font-bold text-folk-purple uppercase tracking-wider">2.5.2026 • Tekov</div>
+            <div class="text-xs font-bold text-folk-purple uppercase tracking-wider">2.5.2026 </div>
           </div>
         </a>
 
@@ -219,127 +219,106 @@
   </div>
 </aside>
 
-<section id="top" class="relative min-h-screen flex items-center justify-center overflow-hidden bg-navy">
-  <!-- Folklórne pozadie -->
-  <div class="absolute inset-0 bg-gradient-to-br from-navy via-primary to-navy opacity-90"></div>
-  <div class="absolute inset-0 embroidery-pattern opacity-30"></div>
+<section id="top" class="relative min-h-screen flex items-center overflow-hidden bg-navy pt-24">
+  <!-- BACKGROUND -->
+  <div class="absolute inset-0">
+    <div class="absolute inset-0 hero-folk-bg"></div>
+    <div class="absolute inset-0 hero-overlay"></div>
 
-  <!-- BOHATÁ VÝZDOBA KVETMI - Hlavná hero sekcia -->
-  <div class="absolute inset-0 overflow-hidden pointer-events-none opacity-40">
-    <!-- Ľavá strana - hustejšie -->
-    <div class="absolute left-[3%] top-[8%] text-7xl text-folk-pink float-animation" style="animation-delay: 0s;">✿</div>
-    <div class="absolute left-[8%] top-[18%] text-5xl text-folk-purple float-animation" style="animation-delay: 0.8s;">❀</div>
-    <div class="absolute left-[5%] top-[28%] text-6xl text-folk-blue float-animation" style="animation-delay: 1.2s;">✿</div>
-    <div class="absolute left-[10%] top-[38%] text-5xl text-folk-green float-animation" style="animation-delay: 2s;">❀</div>
-    <div class="absolute left-[6%] top-[48%] text-7xl text-folk-pink float-animation" style="animation-delay: 1.5s;">✿</div>
-    <div class="absolute left-[12%] top-[60%] text-6xl text-folk-purple float-animation" style="animation-delay: 0.3s;">❀</div>
-    <div class="absolute left-[8%] top-[72%] text-5xl text-folk-blue float-animation" style="animation-delay: 2.2s;">✿</div>
-    <div class="absolute left-[15%] bottom-[12%] text-7xl text-folk-green float-animation" style="animation-delay: 0.5s;">❀</div>
-
-    <!-- Pravá strana - hustejšie -->
-    <div class="absolute right-[3%] top-[12%] text-6xl text-folk-purple float-animation" style="animation-delay: 1s;">❀</div>
-    <div class="absolute right-[8%] top-[22%] text-7xl text-folk-pink float-animation" style="animation-delay: 1.8s;">✿</div>
-    <div class="absolute right-[5%] top-[32%] text-5xl text-folk-green float-animation" style="animation-delay: 0.6s;">❀</div>
-    <div class="absolute right-[10%] top-[42%] text-6xl text-folk-blue float-animation" style="animation-delay: 2.5s;">✿</div>
-    <div class="absolute right-[6%] top-[52%] text-7xl text-folk-purple float-animation" style="animation-delay: 1.3s;">❀</div>
-    <div class="absolute right-[12%] top-[64%] text-5xl text-folk-pink float-animation" style="animation-delay: 0.9s;">✿</div>
-    <div class="absolute right-[8%] top-[76%] text-6xl text-folk-green float-animation" style="animation-delay: 2.1s;">❀</div>
-    <div class="absolute right-[12%] bottom-[18%] text-7xl text-folk-blue float-animation" style="animation-delay: 1.7s;">✿</div>
-
-    <!-- Stredové kvety -->
-    <div class="absolute left-[25%] top-[15%] text-5xl text-folk-green float-animation" style="animation-delay: 1.4s;">✿</div>
-    <div class="absolute right-[28%] top-[25%] text-5xl text-folk-pink float-animation" style="animation-delay: 0.7s;">❀</div>
-    <div class="absolute left-[30%] bottom-[20%] text-5xl text-folk-purple float-animation" style="animation-delay: 2.3s;">✿</div>
-    <div class="absolute right-[32%] bottom-[25%] text-5xl text-folk-blue float-animation" style="animation-delay: 1.1s;">❀</div>
-
-    <!-- Malé kvietky na doladenie -->
-    <div class="absolute left-[4%] top-[45%] text-3xl text-folk-pink sway-flower" style="animation-delay: 0.4s;">✿</div>
-    <div class="absolute left-[14%] top-[25%] text-3xl text-folk-blue sway-flower" style="animation-delay: 1.6s;">❀</div>
-    <div class="absolute right-[4%] top-[45%] text-3xl text-folk-purple sway-flower" style="animation-delay: 1.9s;">✿</div>
-    <div class="absolute right-[14%] top-[35%] text-3xl text-folk-green sway-flower" style="animation-delay: 0.2s;">❀</div>
+    <!-- light blobs -->
+    <div class="absolute -top-32 -left-32 w-[520px] h-[520px] bg-folk-pink/20 rounded-full blur-3xl"></div>
+    <div class="absolute bottom-[-200px] right-[-200px] w-[600px] h-[600px] bg-folk-blue/20 rounded-full blur-3xl"></div>
   </div>
 
-  <!-- Vinič ilustrácia -->
-  <div class="absolute top-0 left-0 right-0 h-32 overflow-hidden pointer-events-none opacity-20">
-    <svg class="w-full h-full" viewBox="0 0 1200 100" fill="none">
-      <path d="M0,50 Q50,20 100,50 T200,50 T300,50 T400,50 T500,50 T600,50 T700,50 T800,50 T900,50 T1000,50 T1100,50 T1200,50"
-            stroke="#e91e8c" stroke-width="3" fill="none"/>
-      <circle cx="100" cy="30" r="8" fill="#9b4d96"/>
-      <circle cx="300" cy="70" r="8" fill="#4a90e2"/>
-      <circle cx="500" cy="30" r="8" fill="#5fb878"/>
-      <circle cx="700" cy="70" r="8" fill="#e91e8c"/>
-      <circle cx="900" cy="30" r="8" fill="#9b4d96"/>
-    </svg>
-  </div>
+  <!-- CONTENT -->
+  <div class="relative z-10 max-w-7xl mx-auto px-6 w-full">
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-14 items-center">
 
-  <!-- Content -->
-  <div class="relative z-10 max-w-5xl mx-auto px-6 py-32 text-center">
-    <div class="mb-8">
-      <img src="cdlogo.jpg" alt="Čilejkárska desina"
-           class="w-40 h-40 sm:w-48 sm:h-48 mx-auto shadow-2xl rounded-full border-8 border-white pulse-folk" />
-    </div>
+      <!-- LEFT -->
+      <div class="text-center lg:text-left">
+        <span class="inline-flex items-center gap-2 px-4 py-2 bg-white/10 border border-white/30 text-white uppercase tracking-widest text-xs font-bold">
+          <span class="material-icons text-folk-pink text-sm">place</span>
+          Tekov • 2. máj 2026
+        </span>
 
-    <div class="inline-flex items-center gap-4 px-9 py-3 bg-white border-4 border-folk-pink text-folk-pink text-sm font-bold tracking-wide uppercase mb-8 shadow-lg">
-      <span class="material-icons text-lg">emoji_events</span>
-      <span><b>1. ročník • Komunitné podujatie</b></span>
-    </div>
+        <h1 class="mt-6 handwritten-title text-5xl sm:text-6xl xl:text-7xl text-white leading-tight">
+          Čilejkárska<br>
+          <span class="text-folk-pink">DESINA</span>
+        </h1>
 
-    <h1 class="handwritten-title
-             text-7xl
-             sm:text-8xl
-             md:text-9xl
-             lg:text-[9.5rem]
-             xl:text-[11rem]
-             text-white mb-9 leading-tight">
-      Beh<br/>v srdci <span class="text-folk-pink">Tekova</span>
-    </h1>
+        <p class="mt-6 text-white/80 text-lg max-w-xl mx-auto lg:mx-0 font-serif">
+          Komunitné bežecké podujatie s folklórnou atmosférou v srdci Tekova.
+        </p>
 
-    <!-- COUNTDOWN -->
-    <div class="mt-10 mb-16 w-full flex justify-center">
-      <div class="inline-block bg-white/10 backdrop-blur border-4 border-white/70 shadow-xl px-4 sm:px-6 py-5 w-full max-w-md">
-        <div class="text-xs font-black uppercase tracking-widest text-folk-cream/90 mb-3 text-center">
-          Štart už o
+        <!-- STATS -->
+        <div class="mt-8 flex flex-wrap gap-3 justify-center lg:justify-start">
+          <div class="hero-pill">10 km</div>
+          <div class="hero-pill">5 km</div>
+          <div class="hero-pill">Detské behy</div>
+          <div class="hero-pill">Štart 9:00</div>
         </div>
 
-        <div class="grid grid-cols-4 gap-2 sm:gap-3 md:gap-4">
-          <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-3 md:px-4 py-2 sm:py-3 shadow">
-            <div id="cd-days" class="handwritten-title text-2xl sm:text-3xl md:text-4xl lg:text-5xl text-white leading-none text-center">—</div>
-            <div class="text-[9px] sm:text-[10px] md:text-[11px] font-bold text-white/80 uppercase tracking-wider mt-1 text-center">dní</div>
-          </div>
-
-          <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-3 md:px-4 py-2 sm:py-3 shadow">
-            <div id="cd-hours" class="handwritten-title text-2xl sm:text-3xl md:text-4xl lg:text-5xl text-white leading-none text-center">—</div>
-            <div class="text-[9px] sm:text-[10px] md:text-[11px] font-bold text-white/80 uppercase tracking-wider mt-1 text-center">hod</div>
-          </div>
-
-          <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-3 md:px-4 py-2 sm:py-3 shadow">
-            <div id="cd-mins" class="handwritten-title text-2xl sm:text-3xl md:text-4xl lg:text-5xl text-white leading-none text-center">—</div>
-            <div class="text-[9px] sm:text-[10px] md:text-[11px] font-bold text-white/80 uppercase tracking-wider mt-1 text-center">min</div>
-          </div>
-
-          <div class="bg-navy/70 border-2 border-white/60 px-2 sm:px-3 md:px-4 py-2 sm:py-3 shadow">
-            <div id="cd-secs" class="handwritten-title text-2xl sm:text-3xl md:text-4xl lg:text-5xl text-white leading-none text-center">—</div>
-            <div class="text-[9px] sm:text-[10px] md:text-[11px] font-bold text-white/80 uppercase tracking-wider mt-1 text-center">sek</div>
-          </div>
+        <!-- CTA -->
+        <div class="mt-10 flex flex-col sm:flex-row gap-4 justify-center lg:justify-start">
+          <a href="#registration" class="hero-cta-primary">
+            Registrovať sa
+          </a>
+          <a href="#route" class="hero-cta-secondary">
+            Pozrieť trasu
+          </a>
         </div>
-
-        <div id="cd-note" class="mt-3 text-xs font-bold text-white/70 text-center"></div>
       </div>
-    </div>
 
-    <div class="flex flex-col sm:flex-row gap-5 justify-center">
-      <a href="#registration"
-         class="inline-flex items-center justify-center gap-2 bg-folk-pink hover:bg-folk-purple text-white font-black py-5 px-10 border-4 border-white shadow-xl hover:shadow-2xl transition-all text-lg uppercase tracking-wide">
-        <span>Zaregistruj sa teraz</span>
-        <span class="material-icons">arrow_forward</span>
-      </a>
-      <a href="#route"
-         class="inline-flex items-center justify-center gap-2 bg-white hover:bg-folk-cream text-navy font-black py-5 px-10 border-4 border-white transition-all text-lg uppercase tracking-wide">
-        <span>Pozrieť trasu</span>
-      </a>
+      <!-- RIGHT -->
+      <div class="relative">
+        <div class="hero-poster">
+          <img src="cdlogo.jpg" class="hero-logo" alt="Čilejkárska desina logo">
+
+          <div class="mt-6 handwritten-title text-3xl text-white">
+            Beh v srdci<br>
+            <span class="text-folk-pink">Tekovského regiónu</span>
+          </div>
+
+          <div class="mt-4 text-white/70 font-serif">
+            Hronské Kľačany • Starý Tekov • Veľké Kozmálovce
+          </div>
+          <!-- COUNTDOWN -->
+          <div class="mt-8 hero-countdown">
+            <div class="hero-countdown__label">Štart už o</div>
+
+            <div class="hero-countdown__grid">
+              <div class="hero-countdown__cell">
+                <div id="cd-days" class="hero-countdown__num">—</div>
+                <div class="hero-countdown__txt">dní</div>
+              </div>
+
+              <div class="hero-countdown__cell">
+                <div id="cd-hours" class="hero-countdown__num">—</div>
+                <div class="hero-countdown__txt">hod</div>
+              </div>
+
+              <div class="hero-countdown__cell">
+                <div id="cd-mins" class="hero-countdown__num">—</div>
+                <div class="hero-countdown__txt">min</div>
+              </div>
+
+              <div class="hero-countdown__cell">
+                <div id="cd-secs" class="hero-countdown__num">—</div>
+                <div class="hero-countdown__txt">sek</div>
+              </div>
+            </div>
+
+            <div id="cd-note" class="hero-countdown__note"></div>
+          </div>
+
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
+
+
 
 <div class="folk-wave"></div>
 
